Implement lab2